Editing Clear button wording and changing cursor

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="content">
 
-        <button class="clear-all">Clear</button>
+        <button class="clear-all">Clear (Esc)</button>
 
         <div class="title">
             <h1 class="big-bold-header">Defect Severity</h1>
